# bmad-loop-adapter-goose

./: CONTRIBUTING.md  README.md  pyproject.toml
src/bmad_loop_adapter_goose/: __init__.py  goose_acp.py
src/bmad_loop_adapter_goose/profiles/: goose.toml
tests/: test_goose_acp.py  test_stories_e2e_goose.py
